--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt-zip": "~0.12.0",
     "grunt-sails-linker": "~0.9.5",
     "grunt": "~0.4.2",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-uglify": "~0.3.2"
   },
   "scripts": {
     "test": "grunt test"
