--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "joda-js",
-  "title": "A simple joda time inspired js date/time library",
-  "version": "0.1.0",
-  "private": false,
-  "author": {
-    "name": "Stefan Niederhauser <ghuder5@gmx.ch>",
-    "company": ""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nidi3/joda-js"
-  },
-  "devDependencies": {
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-bower-task": "~0.3.4",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-saucelabs": "~5.0.1",
-    "grunt-contrib-connect": "~0.6.0",
-    "grunt-cli": "~0.1.13",
-    "grunt-zip": "~0.12.0",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt": "~0.4.2",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-uglify": "~0.3.2"
-  },
-  "scripts": {
-    "test": "grunt test"
-  },
-  "engines": {
-    "node": ">0.10.5",
-    "npm": ">1.2.18"
-  }
+    "name": "joda-js",
+    "title": "A simple joda time inspired js date/time library",
+    "version": "0.1.0",
+    "private": false,
+    "author": {
+        "name": "Stefan Niederhauser <ghuder5@gmx.ch>",
+        "company": ""
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/nidi3/joda-js"
+    },
+    "devDependencies": {
+        "grunt-contrib-clean": "~0.5.0",
+        "grunt-contrib-concat": "~0.3.0",
+        "grunt-bower-task": "~0.3.4",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-saucelabs": "~5.0.1",
+        "grunt-contrib-connect": "~0.6.0",
+        "grunt-cli": "~0.1.13",
+        "grunt-zip": "~0.12.0",
+        "grunt-sails-linker": "~0.9.5",
+        "grunt": "~0.4.2",
+        "grunt-contrib-copy": "~0.5.0",
+        "grunt-contrib-uglify": "~0.3.2",
+        "grunt-contrib-jasmine": "~0.5.2",
+        "grunt-template-jasmine-istanbul": "~0.2.6"
+    },
+    "scripts": {
+        "test": "grunt test"
+    },
+    "engines": {
+        "node": ">0.10.5",
+        "npm": ">1.2.18"
+    }
 }
