--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 bower_components/
 node_modules/
-dist/
 .idea/
-test-jasmine/lib/
-test-jasmine/spec/
-coverage/
+target/
 *.log
 *.iml
 .DS_Store
