--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "Stefan Niederhauser <ghuder5@gmx.ch>"
   ],
   "description": "A simple joda time inspired js date/time library",
-  "main": "dist/joda-js.js",
+  "main": "target/dist/joda-js.js",
   "dependencies": {},
   "devDependencies": {
     "jasmine": "~1.3.1"
